--- a/NurseMobile/NurseMobile/NurseMobile.csproj
+++ b/NurseMobile/NurseMobile/NurseMobile.csproj
@@ -40,6 +40,9 @@
     <EmbeddedResource Update="MedicalPurposePage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="MenuPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="NursesList.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
