set screen consultation

--- a/NurseMobile/NurseMobile.Android/NurseMobile.Android.csproj
+++ b/NurseMobile/NurseMobile.Android/NurseMobile.Android.csproj
@@ -90,9 +90,6 @@
     <AndroidResource Include="Resources\mipmap-xxxhdpi\launcher_foreground.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable\jjj.jpg" />
-  </ItemGroup>
-  <ItemGroup>
     <ProjectReference Include="..\NurseMobile\NurseMobile.csproj">
       <Project>{410BAD86-7B30-4265-976B-38E048B2862A}</Project>
       <Name>NurseMobile</Name>
@@ -100,6 +97,9 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\Logo.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\Logo2.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
